# declip

./: .gitignore  AUDIT.md  CHANGELOG.md  README.md  pyproject.toml
docs/workflows/: README.md  beat-sync.md  cutdown.md  ingest.md  review.md  speech-cleanup.md  vertical.md
examples/: auto_sequence.json  beat-sync.json  cutdown.json  multitrack.json  simple_cut.json  speech-cleanup.json
scripts/: beat-sync.sh  cutdown.sh  ingest.sh  review.sh  speech-cleanup.sh  vertical.sh
src/declip/: __init__.py  analyze.py  cli.py  fetch_models.py  generate.py  ops.py  output.py  probe.py  schema.py
src/declip/backends/: ffmpeg.py  mlt.py
src/declip/mcp/: advanced_tools.py  analysis_tools.py  edit_tools.py  generate_tools.py  media_tools.py  pipeline_tools.py  project_tools.py  quick_tools.py  server.py  types.py  workflow_tools.py
src/declip/workflows/: __init__.py  _render.py  beat_sync.py  cutdown.py  ingest.py  review.py  speech_cleanup.py  types.py  vertical.py
tests/: test_ops.py  test_schema.py
