[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "declip"
version = "0.7.0"
description = "Declarative video editing — JSON in, video out"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "av>=12.0",
    "numpy>=1.26",
    "Pillow>=10.0",
    "mcp>=1.2.0",
    "pytesseract>=0.3",
    "librosa>=0.10",
    "midiutil>=1.2",
    "faster-whisper>=1.0",
    "watchdog>=4.0",
    "fal-client>=0.13",
]

[project.scripts]
declip = "declip.cli:main"
declip-mcp = "declip.mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]
